--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "type": "git",
     "url": "https://github.com/dai-shi/katachidraw.git"
   },
+  "main": "./src/ExpoEntry.ts",
   "source": "./src/library.ts",
-  "main": "./dist/library.js",
+  "module": "./dist/library.js",
   "types": "./dist/library.d.ts",
   "sideEffects": false,
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": "./dist/library.js",
+      "types": "./dist/library.d.ts"
+    }
+  },
   "files": [
     "src",
     "dist"
@@ -19,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "eslint --ext .js,.ts,.tsx src && tsc && react-scripts test --transformIgnorePatterns \"node_modules/(?!points-on-curve)/\"",
-    "compile": "tsc --noEmit false --declaration --outDir dist"
+    "compile": "tsc --noEmit false --declaration --outDir dist",
+    "expo-start": "expo start"
   },
   "keywords": [
     "react",
@@ -49,7 +58,9 @@
     "@types/react-native": "^0.63.45",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "expo": "^40.0.1",
     "prettier": "^2.2.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-scripts": "^4.0.1",
     "typescript": "^4.1.3"
   },
