--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.46",
+    "browser-fs-access": "^0.13.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "expo": "^40.0.1",
+    "expo-file-system": "^10.0.0",
     "prettier": "^2.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-scripts": "^4.0.1",
