--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "expo": "^40.0.1",
     "expo-file-system": "^10.0.0",
+    "expo-media-library": "^11.0.0",
     "prettier": "^2.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-scripts": "^4.0.1",
