--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "expo-image-picker": "^10.0.0",
     "jotai": "^0.12.7",
     "points-on-curve": "^0.2.0",
     "react": "^17.0.1",
@@ -62,11 +61,28 @@
     "eslint-plugin-prettier": "^3.3.1",
     "expo": "^40.0.1",
     "expo-file-system": "^10.0.0",
+    "expo-image-picker": "^10.0.0",
     "expo-sharing": "^9.0.0",
     "prettier": "^2.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-scripts": "^4.0.1",
     "typescript": "^4.1.3"
+  },
+  "peerDependencies": {
+    "expo-file-system": "*",
+    "expo-image-picker": "*",
+    "expo-sharing": "*"
+  },
+  "peerDependenciesMeta": {
+    "expo-file-system": {
+      "optional": true
+    },
+    "expo-image-picker": {
+      "optional": true
+    },
+    "expo-sharing": {
+      "optional": true
+    }
   },
   "eslintConfig": {
     "extends": [
