--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "license": "MIT",
   "dependencies": {
     "jotai": "^0.12.7",
-    "points-on-curve": "^0.2.0",
+    "perfect-freehand": "^0.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native-svg": "^12.1.0",
