--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "katachidraw",
   "description": "SVG based drawing tool and react-native component",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/library.js",
+      "module": "./dist/library.js",
       "types": "./dist/library.d.ts"
     }
   },
