--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "expo-file-system": "^10.0.0",
     "expo-image-picker": "^10.0.0",
     "expo-sharing": "^9.0.0",
+    "expo-status-bar": "^1.0.3",
     "prettier": "^2.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-scripts": "^4.0.1",
@@ -71,7 +72,8 @@
   "peerDependencies": {
     "expo-file-system": "*",
     "expo-image-picker": "*",
-    "expo-sharing": "*"
+    "expo-sharing": "*",
+    "expo-status-bar": "*"
   },
   "peerDependenciesMeta": {
     "expo-file-system": {
@@ -81,6 +83,9 @@
       "optional": true
     },
     "expo-sharing": {
+      "optional": true
+    },
+    "expo-status-bar": {
       "optional": true
     }
   },
