--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "^0.14.10"
+    "react-native-web": "^0.14.10",
+    "svg-path-bbox": "^0.2.0",
+    "svgpath": "^2.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -55,6 +57,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.46",
+    "@types/svg-path-bbox": "^0.2.0",
     "browser-fs-access": "^0.13.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
