--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@xstate/react": "^1.3.1",
     "jotai": "^0.15.0",
     "perfect-freehand": "^0.2.3",
     "react": "^17.0.1",
@@ -46,7 +47,9 @@
     "react-native-svg": "^12.1.0",
     "react-native-web": "^0.14.10",
     "svg-path-bbox": "^0.2.0",
-    "svgpath": "^2.3.1"
+    "svgpath": "^2.3.1",
+    "uuid": "^8.3.2",
+    "xstate": "^4.16.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -58,6 +61,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.46",
     "@types/svg-path-bbox": "^0.2.0",
+    "@types/uuid": "^8.3.0",
+    "@xstate/inspect": "^0.4.1",
     "browser-fs-access": "^0.13.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
