--- a/package.json
+++ b/package.json
@@ -39,37 +39,37 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "jotai": "^0.15.0",
-    "perfect-freehand": "^0.3.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "^0.14.10",
+    "jotai": "^0.16.3",
+    "perfect-freehand": "^0.4.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.16.1",
     "svg-path-bbox": "^0.2.0",
     "svgpath": "^2.3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-native": "^0.63.46",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-native": "^0.64.4",
     "@types/svg-path-bbox": "^0.2.0",
-    "browser-fs-access": "^0.13.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "expo": "^40.0.1",
+    "browser-fs-access": "^0.16.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "expo": "^41.0.1",
     "expo-file-system": "^10.0.0",
     "expo-image-picker": "^10.0.0",
     "expo-sharing": "^9.0.0",
     "expo-status-bar": "^1.0.3",
     "prettier": "^2.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-scripts": "^4.0.1",
-    "typescript": "^4.1.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "expo-file-system": "*",
@@ -95,9 +95,7 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "plugin:prettier/recommended",
-      "prettier",
-      "prettier/react"
+      "plugin:prettier/recommended"
     ]
   },
   "browserslist": {
