--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native-svg": "^12.1.1",
-    "react-native-web": "^0.16.1",
+    "react-native-web": "0.14.13",
     "svg-path-bbox": "^0.2.0",
     "svgpath": "^2.3.1"
   },
