--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.14.13",
     "svg-path-bbox": "^1.0.1",
-    "svgpath": "^2.3.1"
+    "svgpath": "^2.3.1",
+    "xstate": "^4.23.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -58,6 +59,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-native": "^0.64.13",
     "@types/svg-path-bbox": "^1.0.0",
+    "@xstate/inspect": "^0.4.1",
     "browser-fs-access": "^0.20.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
