--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.17.5",
     "svg-path-bbox": "^1.0.1",
-    "svgpath": "^2.3.1"
+    "svgpath": "^2.3.1",
+    "xstate": "^4.26.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -58,6 +59,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-native": "^0.66.9",
     "@types/svg-path-bbox": "^1.0.0",
+    "@xstate/inspect": "^0.5.2",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
     "browser-fs-access": "^0.23.0",
