--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "jotai": "^1.4.7",
+    "jotai": "1.4.4",
     "perfect-freehand": "^1.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -59,9 +59,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-native": "^0.66.9",
     "@types/svg-path-bbox": "^1.0.0",
-    "@xstate/inspect": "^0.5.2",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
+    "@xstate/inspect": "^0.5.2",
     "browser-fs-access": "^0.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
