--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "jotai": "^1.4.7",
+    "jotai": "1.4.4",
     "perfect-freehand": "^1.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -54,22 +54,22 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.13",
+    "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-native": "^0.66.9",
     "@types/svg-path-bbox": "^1.0.0",
-    "@xstate/inspect": "^0.5.2",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
+    "@xstate/inspect": "^0.5.2",
     "browser-fs-access": "^0.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "expo": "^43.0.4",
-    "expo-file-system": "^10.0.0",
-    "expo-image-picker": "^10.0.0",
-    "expo-sharing": "^9.0.0",
-    "expo-status-bar": "^1.0.3",
+    "expo": "^44.0.0",
+    "expo-file-system": "^13.1.0",
+    "expo-image-picker": "^12.0.1",
+    "expo-sharing": "^10.1.0",
+    "expo-status-bar": "^1.2.0",
     "prettier": "^2.5.1",
     "react-native": "0.64.3",
     "react-scripts": "^5.0.0",
