--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "jotai": "^1.4.4",
-    "perfect-freehand": "^1.0.16",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "^0.17.5",
-    "svg-path-bbox": "^1.0.1",
-    "svgpath": "^2.3.1",
-    "xstate": "^4.26.1"
+    "jotai": "2.3.1",
+    "jotai-xstate": "^0.3.0",
+    "perfect-freehand": "1.0.16",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.5",
+    "svg-path-bbox": "1.0.1",
+    "svgpath": "2.3.1",
+    "xstate": "4.26.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -76,12 +77,12 @@
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
     "expo-file-system": "*",
     "expo-image-picker": "*",
     "expo-sharing": "*",
-    "expo-status-bar": "*"
+    "expo-status-bar": "*",
+    "react": "*",
+    "react-dom": "*"
   },
   "peerDependenciesMeta": {
     "expo-file-system": {
