--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "license": "MIT",
   "dependencies": {
     "jotai": "2.3.1",
-    "jotai-xstate": "^0.3.0",
+    "jotai-xstate": "0.3.0",
     "perfect-freehand": "1.0.16",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.5",
